--- a/app/src/main/res/layout/activity_listagem.xml
+++ b/app/src/main/res/layout/activity_listagem.xml
@@ -4,12 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ListagemActivity">
 
     <ListView
         android:id="@+id/listViewFabricante"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="wrap_content"
+        android:layout_height="521dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="cadastrarNovo"
+        android:text="@string/cadastrar" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="mostarAutoria"
+        android:text="@string/autoria" />
+
 </android.widget.LinearLayout>
