--- a/app/src/main/res/menu/principal_opcoes.xml
+++ b/app/src/main/res/menu/principal_opcoes.xml
@@ -10,4 +10,8 @@
     <item
         android:id="@+id/menuItemSobre"
         android:title="@string/sobre" />
+    <item
+        android:id="@+id/menuItemSort"
+        android:checkable="true"
+        android:title="@string/sort" />
 </menu>
